# a-star

./: .gitignore  LICENSE  a_star.ipynb  pyproject.toml
data/: direct_distances.csv  route_distances.csv
