[tool.poetry]
name = "A* DSC"
version = "0.1.0"
description = "A* algorithm implementation with Openrouteservice API"
authors = ["DenisioMytnysiano <den.mytnyk@ua.fm>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
geopy = "^2.2.0"
openrouteservice = "^2.3.3"
matplotlib = "^3.4.3"
networkx = "^2.6.3"
python-dotenv = "^0.19.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
